<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_new_task"
        app:showAsAction="always"
        android:title="@string/main_new"
        android:onClick="navigateToNewTask"/>

</menu>