<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:showIn="@layout/activity_main"
                tools:context=".MainActivityFragment">

    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
        android:id="@+id/main_task_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rrvIsRefreshable="true"
        app:rrvLayoutType="LinearLayout"
        app:rrvEmptyLayoutId="@layout/empty_view"
        />

</RelativeLayout>
